GP: - Minor fixes related to static fields and performance optimization